--- a/blog/src/app/app.component.html
+++ b/blog/src/app/app.component.html
@@ -5,7 +5,7 @@
     aria-controls="navbarsDefault" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <a class="nav-link" [routerLink]='["/login"]'>Login</a>
+  <!-- <a class="nav-link" [routerLink]='["/login"]'>Login</a> -->
   <!-- <div [ngbCollapse]="isNavbarCollapsed" class="collapse navbar-collapse" id="navbarsDefault">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item dropdown" ngbDropdown>
